# simple_moveit_wrapper

./: .clang-format  CMakeLists.txt  LICENSE  package.xml  readme.md
examples/: minimal_example.cpp  range.h  ultra_light_cartesian_planner.cpp  ultra_light_planner.launch
include/simple_moveit_wrapper/: industrial_robot.h  math.h  planar_robot.h  robot.h  threadsafe_state_storage.h
include/simple_moveit_wrapper/inverse_kinematics/: planar_3r_ik.h
src/: industrial_robot.cpp  planar_robot.cpp  robot.cpp  threadsafe_state_storage.cpp
test/: opw_kinematics_fanuc.yaml  test_fanuc.cpp  test_fanuc.rostest
